SF Primes/src/objects/Campaign_Mgmt_VF_Page_Assign__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows admins to specify which VF page layout a user of a given profile should see</description>
    <fields>
        <fullName>Campaign_VF_Layout__c</fullName>
        <label>Campaign VF Layout</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Follow_up_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Follow-up Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_by_Account_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter by Account Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Gen Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Show_Log_a_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Log-a-Call?</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Mgmt VF Page Assignment</label>
</CustomObject>